generic repository
methods create, create with relationship, delete, find and save to manipulate the neo4j, and utils folder to the helper manipulations on  the repository folder
