# docs/swagger.json
@@ -228,7 +228,40 @@
                 }
             }
         },
-        "/person/{id}": {
+        "/person/{name}/{born}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "person"
+                ],
+                "summary": "Get person by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name Person",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "year person born",
+                        "name": "born",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            },
             "put": {
                 "produces": [
                     "application/json"
@@ -239,9 +272,16 @@
                 "summary": "Edit a person",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "name Person",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
-                        "description": "Person ID",
-                        "name": "id",
+                        "description": "year person born",
+                        "name": "born",
                         "in": "path",
                         "required": true
                     },
@@ -274,37 +314,6 @@
                 "summary": "Delete a person",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Person ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    }
-                }
-            }
-        },
-        "/person/{name}/{born}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "person"
-                ],
-                "summary": "Get person by id",
-                "parameters": [
-                    {
                         "type": "string",
                         "description": "name Person",
                         "name": "name",
@@ -325,6 +334,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -391,13 +403,11 @@
             "type": "object",
             "properties": {
                 "ano": {
+                    "description": "From         string `json:\"from\"`\nTo           string `json:\"to\"",
                     "type": "string"
                 },
                 "born": {
                     "type": "integer"
-                },
-                "from": {
-                    "type": "string"
                 },
                 "mes": {
                     "type": "string"
@@ -406,7 +416,6 @@
                     "type": "string"
                 },
                 "relationship_type": {
-                    "description": "ACTED    bool   `json:\"acted_relationship\"`\nDIRECTED bool   `json:\"direct_relationship\"`",
                     "type": "string"
                 },
                 "released": {
@@ -417,9 +426,6 @@
                 },
                 "title": {
                     "description": "gorm.Model",
-                    "type": "string"
-                },
-                "to": {
                     "type": "string"
                 }
             }
